[Fix bug] 修复点击问题

--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -5,29 +5,27 @@ page{
 
   position: fixed;
   left: 0; top: 0;
-  width: 100%; height: 100%;
+  width: 100%;
   z-index: 10;
 
-  pointer-events: none;
-
   .top-mask {
-    position: absolute;
+    position: fixed;
     left: 0; top: 0rpx;
     width: 100%; height: 256rpx;
+
+    pointer-events: none;
   }
   .bottom-mask {
-    position: absolute;
+    position: fixed;
     left: 0; bottom: 0rpx;
     width: 100%; height: 160rpx;
+
+    pointer-events: none;
   }
 
   .container-top {
     position: absolute;
     top: 80rpx;
-  }
-
-  .absoluter {
-    pointer-events: all;
   }
 
   .search {
