[Enhancement] 完善其他功能

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -27,7 +27,7 @@
     top: 80rpx;
   }
   .room-info {
-    margin-top: 15%;
+    margin-top: 12.5%;
     width: 100%;
     transition: all 1s ease 0s;
 
@@ -40,9 +40,13 @@
 
       transition: all 1.5s ease 0s;
     }
+    .room-display-id {
+      font-size: 20rpx;
+      margin-top: 12rpx;
+    }
     .room-name {
       width: 296rpx; height: 80rpx;
-      margin: 12rpx auto;
+      margin: 4rpx auto;
 
       text-align: center;
 
@@ -64,7 +68,7 @@
     }
   }
   .room-info.focusing {
-    margin-top: 12%;
+    margin-top: 10%;
   }
 
   .focus-btn {
