--- a/pages/visit/visit.less
+++ b/pages/visit/visit.less
@@ -17,15 +17,19 @@
   }
 
   .room-info {
-    margin-top: 15%;
+    margin-top: 12.5%;
     width: 100%;
     transition: all 1s ease 0s;
 
     text-align: center;
 
+    .room-display-id {
+      font-size: 20rpx;
+      margin-top: 12rpx;
+    }
     .room-name {
       width: 296rpx; height: 80rpx;
-      margin: 12rpx auto;
+      margin: 4rpx auto;
 
       font-size: 32rpx;
       line-height: 80rpx;
