--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -7,7 +7,8 @@
     </view>
     <gold-level-display wx:if="{{!runtimeFocus}}" gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}" />
     <view class="room-info {{runtimeFocus ? 'focusing' : ''}}">
-      <text wx:if="{{runtimeFocus}}" class="top-player-name">{{player.name}}'s</text>
+<!--      <view wx:if="{{runtimeFocus}}" class="top-player-name">{{player.name}}'s</view>-->
+      <view class="room-display-id">房间ID：{{item.displayId}}</view>
       <view class="room-name">
         <input class="text" maxlength="6" value="{{item.name}}" placeholder="输入房间名~" disabled="{{runtimeFocus}}" bind:blur="onRoomNameBlur" />
       </view>
