--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -10,7 +10,9 @@
      <text class="slogan">{{player.slogan}}</text>
    </view>
   <scroll-view class="room-list" scroll-y="{{true}}" >
-    <text class="label">我的收藏</text>
+    <text class="label">更多功能</text>
+  
+    <van-empty description="施工中，敬请期待哦~" />
 <!--    <view wx:for="{{collectedRooms}}" class="room-card">-->
 <!--      <image class="room" src="../../assets/common/3.png" mode="heightFix"></image>-->
 <!--      <view class="info">-->
