--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -487,6 +487,18 @@ van-dialog {
       border-radius: 8rpx;
     }
   }
+  .tip-content {
+    padding: 32rpx;
+    .title {
+      text-align: center;
+      margin: 0 auto 24rpx;
+      font-size: 28rpx;
+    }
+    .line {
+      margin: 0 auto 24rpx;
+      font-size: 24rpx;
+    }
+  }
 }
 
 .focus-bottom{
