--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -72,8 +72,10 @@
             width="80%" data-window="Start">
   <view class="start-config">
     <view class="start-config-top">
-      <image class="top-img" src="/assets/main/desc.png" mode="heightFix" />
-      <image class="top-img" src="/assets/main/close.png" mode="heightFix" bindtap="onClickHide" data-window="Start" />
+      <image class="top-img" src="/assets/main/desc.png" mode="heightFix"
+             bind:tap="onClickShow" data-window="Tips"/>
+      <image class="top-img" src="/assets/main/close.png" mode="heightFix"
+             bind:tap="onClickHide" data-window="Start" />
     </view>
     <image class="clock-img" src="{{item.thumbnailFileId}}" mode="widthFix" />
     <van-slider value="{{focus.duration}}" min="{{item.minDuration}}" max="{{item.maxDuration}}" bind:drag="onDragTime" />
@@ -165,6 +167,17 @@
       <view wx:for="{{focusTags}}" class="btn {{focus.tagIdx == index ? 'selected' : ''}}" bind:tap="onTagTab" data-index="{{index}}">{{item}}</view>
     </view>
     <view class="selector-btn" bindtap="onClickHide" data-window="Tags">完成</view>
+  </view>
+</van-dialog>
+<van-dialog use-slot show="{{ isShowTipsWindow }}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            width="60%" data-window="Tips">
+  <view class="tip-content">
+    <view class="title">说明</view>
+    <view class="line">基础模式：专注期间无任何限制，但如果频繁操作手机有可能导致专注中断</view>
+    <view class="line">反盖模式：需要将手机反扣在桌面上才能进行专注，从而防止自己使用手机</view>
   </view>
 </van-dialog>
 
