--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -565,18 +565,16 @@ van-dialog {
     }
     .slogan {
       position: absolute;
-
       left: 192rpx; right: 32rpx;
       height: 80rpx;
-
       border-radius: 14rpx;
       background-color: rgba(0,0,0,0.13);
-
       color: white;
       font-size: 24rpx;
       text-align: left;
-
       padding: 16rpx 32rpx;
+      word-wrap: break-word;
+      word-break: normal;
     }
   }
 }
@@ -584,9 +582,9 @@ van-dialog {
 .room-status{
   animation: 2s linear 0s move-in;
   position: absolute;
-  left: 58vw;
+  left: 53vw;
   bottom: 25vh;
-  width: 40vw;
+  width: 45vw;
   font-size: 3vw;
   display: flex;
   flex-direction: column;
