[Enhancement] 测试兑换码

--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -37,6 +37,11 @@
       text-align: left;
       color: white;
     }
+    .reward-code {
+      position: absolute;
+      top: 192rpx; right: 32rpx;
+      font-size: 28rpx;
+    }
   }
   .room-list {
     position: absolute;
